[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { version = "0.16.1", features = ["multi_threaded"] }
rayon = "1.11.0"
rustyray = { version = "0.1.4", path = "../rustyray/rustyray" }

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = true
